# neural-webgpu

./: .gitmodules  CMakeLists.txt  LICENSE  wgsl_to_hpp.sh
cmake/: gtest.cmake
src/: Example.hpp  GPU.cpp  GPU.hpp  Model.cpp  Model.hpp  Node.cpp  Node.hpp  Predict.cpp  Predict.hpp  Shader.cpp  Shader.hpp  Tensor.cpp  Tensor.hpp
src/node/: BatchNormalization.cpp  BatchNormalization.wgsl  Conv2D.cpp  Conv2D.wgsl  Conv2DTest.cpp  Conv2DTranspose.cpp  Conv2DTranspose.wgsl  Conv2DTransposeTest.cpp  CrossEntropy.cpp  CrossEntropy.wgsl  Difference.cpp  Difference.wgsl  HuberLoss.cpp  HuberLoss.wgsl  Input.cpp  Interpolation2D.cpp  Interpolation2D.wgsl  LeakyReLU.cpp  LeakyReLU.wgsl  Linear.cpp  Linear.wgsl  LinearTest.cpp  MaxPool2D.cpp  MaxPool2D.wgsl  NodePipeline.cpp  NodePipeline.hpp  ReLU.cpp  ReLU.wgsl  Sigmoid.cpp  Sigmoid.wgsl  Softmax.cpp  Softmax.wgsl  Squared.cpp  Squared.wgsl  SquaredTest.cpp
src/test/: linear.cpp  main.cpp  to_keep
